# LearningPath

./: .gitignore  CMakeLists.txt
ModernC++/: C++14.md  C++17.md  C++20.md  CMakeLists.txt
ModernC++/Cpp11/: C++11.md  CMakeLists.txt
ModernC++/Cpp11/01_decltype/: 01_decltype.cpp  01_decltype.md  CMakeLists.txt
ModernC++/Cpp11/02_constexpr_and_literals/: 02_constexpr_and_literals.cpp  02_constexpr_and_literals.md  CMakeLists.txt
ModernC++/Cpp11/03_delegating_constructors/: 03_delegating_constructors.cpp  03_delegating_constructors.md  CMakeLists.txt
ModernC++/Cpp11/04_variadic_templates/: 04_variadic_templates.cpp  04_variadic_templates.md  CMakeLists.txt
ModernC++/Cpp11/05_generalized_unions/: 05_generalized_unions.cpp  05_generalized_unions.md  CMakeLists.txt
ModernC++/Cpp11/06_generalized_pods/: 06_generalized_pods.cpp  06_generalized_pods.md  CMakeLists.txt
ModernC++/Cpp11/07_alignof_alignas/: 07_alignof_alignas.cpp  07_alignof_alignas.md  CMakeLists.txt
ModernC++/Cpp11/08_multithreaded_memory_model/: 08_multithreaded_memory_model.cpp  08_multithreaded_memory_model.md  CMakeLists.txt
ModernC++/Cpp11/09_std_function/: 09_std_function.cpp  09_std_function.md  CMakeLists.txt
ModernC++/Cpp11/10_unique_shared_and_weak_ptr/: 10_unique_shared_and_weak_ptr.cpp  10_unique_shared_and_weak_ptr.md  CMakeLists.txt
ModernC++/Cpp11/11_thread_local_storage/: 11_thread_local_storage.cpp  11_thread_local_storage.md  CMakeLists.txt
ModernC++/Cpp11/12_chrono/: 12_chrono.cpp  12_chrono.md  CMakeLists.txt
ModernC++/Cpp11/13_foward_list/: 13_foward_list.cpp  13_foward_list.md  CMakeLists.txt
ModernC++/Cpp11/14_future/: 14_future.cpp  14_future.md  CMakeLists.txt
ModernC++/Cpp11/15_mutex/: 15_mutex.cpp  15_mutex.md  CMakeLists.txt
ModernC++/Cpp11/16_random/: 16_random.cpp  16_random.md  CMakeLists.txt
ModernC++/Cpp11/17_ratio/: 17_ratio.cpp  17_ratio.md  CMakeLists.txt
ModernC++/Cpp11/18_regex/: 18_regex.cpp  18_regex.md  CMakeLists.txt
ModernC++/Cpp11/19_scoped_allocator/: 19_scoped_allocator.cpp  19_scoped_allocator.md  19_scoped_allocator_adapter.cpp  CMakeLists.txt
ModernC++/Cpp11/20_system_error/: 20_system_error.cpp  20_system_error.md  CMakeLists.txt
ModernC++/Cpp11/21_thread/: 21_thread.cpp  21_thread.md  CMakeLists.txt
ModernC++/Cpp11/22_tuple/: 22_tuple.cpp  22_tuple.md  CMakeLists.txt
ModernC++/Cpp11/23_metaprogramming_library/: 23_metaprogramming_library.cpp  23_metaprogramming_library.md  CMakeLists.txt
ModernC++/Cpp11/24_nordered_map_and_set/: 24_nordered_map_and_set.cpp  24_nordered_map_and_set.md  CMakeLists.txt
ModernC++/Cpp11/25_emplace/: 25_emplace.cpp  25_emplace.md  CMakeLists.txt
ModernC++/Cpp11/26_move_iterator/: 26_move_iterator.cpp  26_move_iterator.md  CMakeLists.txt
ModernC++/Cpp11/27_all_any_and_non_of/: 27_all_any_and_non_of.cpp  27_all_any_and_non_of.md  CMakeLists.txt
ModernC++/Cpp11/28_findif_copyif_copyn/: 28_findif_copyif_copyn.cpp  28_findif_copyif_copyn.md  CMakeLists.txt
ModernC++/Cpp11/29_move/: 29_move.cpp  29_move.md  CMakeLists.txt
ModernC++/Cpp11/30_shuffle/: 30_shuffle.cpp  30_shuffle.md  CMakeLists.txt
ModernC++/Cpp11/31_partitioned/: 31_partitioned.cpp  31_partitioned.md  CMakeLists.txt
ModernC++/Cpp11/32_sorted/: 32_sorted.cpp  32_sorted.md  CMakeLists.txt
ModernC++/Cpp11/33_is_heap/: 33_is_heap.cpp  33_is_heap.md  CMakeLists.txt
ModernC++/Cpp11/34_minmax/: 34_minmax.cpp  34_minmax.md  CMakeLists.txt
ModernC++/Cpp11/35_is_permutation/: 35_is_permutation.cpp  35_is_permutation.md  CMakeLists.txt
ModernC++/Cpp11/36_iota/: 36_iota.cpp  36_iota.md  CMakeLists.txt
ModernC++/Cpp11/37_uninitialized_copy_n/: 37_uninitialized_copy_n.cpp  37_uninitialized_copy_n.md  CMakeLists.txt
ModernC++/Cpp11/38_begin_end_next_prev/: 38_begin_end_next_prev.cpp  38_begin_end_next_prev.md  CMakeLists.txt
OpenCV/: CMakeLists.txt
OpenCV/1_core_data_structures/: 1_core_data_structures.cpp  1_core_data_structures.md  CMakeLists.txt
OpenCV/2_video_processing/: 2_video_processing.cpp  2_video_processing.md  CMakeLists.txt
OpenCV/3_image_io/: 3_image_io.cpp  3_image_io.md  CMakeLists.txt
OpenCV/4_filters/: 4_1_bluring_smoothing.cpp  4_2_edge_detection.cpp  4_3_morphology.cpp  4_4_custom_kernel.cpp  4_5_video_processing.cpp  4_filters.md  CMakeLists.txt
OpenCV/5_transformations/: 5_transformations.cpp  5_transformations.h  5_transformations.md  CMakeLists.txt
OpenCV/6_image_analysis/: 6_image_analysis.md
OpenCV/7_putting_all_together/: 7_putting_all_together.md
Qt/: 09_best_practices_and_testing.md  11_model_view_programming.md  12_advanced_topics.md  CMakeLists.txt
Qt/02_Qt_core_basics/: CMakeLists.txt
Qt/02_Qt_core_basics/2_1_qt_core/: 2_1_qt_core.cpp  2_1_qt_core.md  CMakeLists.txt
Qt/02_Qt_core_basics/2_2_object_mapping/: CMakeLists.txt
Qt/02_Qt_core_basics/2_3_signals_and_slots/: 2_3_signals_and_slots.md  (+3 more)
Qt/03_QWidgets/: CMakeLists.txt
Qt/04_QTQuick_and_QML/: 00_QTQuick_and_QML.md  01_intorduction_to_QTQuik.md  02_QML_basics.md  CMakeLists.txt
Qt/05_graphics_and_multimeda/: 00_graphics_and_multimedia.md
Qt/06_network_and_databases/: 06_network_and_databases.md
Qt/07_concurency/: 07_concurency.md
Qt/08_opencv_with_qt/: 08_opencv_with_qt.md
cmake/: common.cmake
src/: main.cpp
(+41 files in other folders)
