add_subdirectory(01_decltype)
add_subdirectory(02_constexpr_and_literals)
add_subdirectory(03_delegating_constructors)
add_subdirectory(04_variadic_templates)
add_subdirectory(05_generalized_unions)
add_subdirectory(06_generalized_pods)
add_subdirectory(07_alignof_alignas)
add_subdirectory(08_multithreaded_memory_model)
add_subdirectory(09_std_function)
add_subdirectory(10_unique_shared_and_weak_ptr)
add_subdirectory(11_thread_local_storage)
add_subdirectory(12_chrono)
add_subdirectory(13_foward_list)
add_subdirectory(14_future)
add_subdirectory(15_mutex)
add_subdirectory(16_random)
add_subdirectory(17_ratio)
add_subdirectory(18_regex)
add_subdirectory(19_scoped_allocator)
add_subdirectory(20_system_error)
add_subdirectory(21_thread)
add_subdirectory(22_tuple)
add_subdirectory(23_metaprogramming_library)
add_subdirectory(24_nordered_map_and_set)
add_subdirectory(25_emplace)
add_subdirectory(26_move_iterator)
add_subdirectory(27_all_any_and_non_of)
add_subdirectory(28_findif_copyif_copyn)
add_subdirectory(29_move)
add_subdirectory(30_shuffle)
add_subdirectory(31_partitioned)
add_subdirectory(32_sorted)
add_subdirectory(33_is_heap)
add_subdirectory(34_minmax)
add_subdirectory(35_is_permutation)
add_subdirectory(36_iota)
add_subdirectory(37_uninitialized_copy_n)
add_subdirectory(38_begin_end_next_prev)
